# biomed-research-integrity-auditor

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
.github/workflows/: validate.yml
benchmarks/pppr_integrity_benchmark/: DATASET_CARD.md  LABELING_GUIDE.md  LICENSE_NOTES.md  README.md  labels.schema.json
benchmarks/real_image/: README.md  asset_metadata.json  generate_real_image_benchmark.py  run_real_image_benchmark.py
benchmarks/scanned_pdf/: README.md  generate_scanned_pdf_benchmark.py  run_scanned_pdf_benchmark.py
benchmarks/true_pdf/: README.md  generate_true_pdf_benchmark.py  run_true_pdf_benchmark.py
calibrators/: contextual_joiner.py  contract_validation.py  risk_cap_engine.py
detectors/image/: global_near_duplicate.py  image_io.py  local_patch_reuse.py
detectors/stats/: pseudoreplication_screen.py
detectors/text/: __init__.py  external_literature_search.py  text_overlap_screen.py
docs/: PRODUCT_REVIEW_2026-07-02.md  REVIEW-2026-06-29.md  architecture.md  benchmarking_with_pubpeer_and_rwdb.md  data_ethics_and_legal_boundaries.md  design-notes.md  response-to-concern-guide.md  self-audit-guide.md  webapp-plan.md
evals/: assert_audit_outputs.py  eval_protocol.md  generate_synthetic_cases.py  run_eval.py  run_script_baseline.py
evals/ground_truth/: case_001.expected.yaml  case_002.expected.yaml  case_003.expected.yaml  case_004.expected.yaml  case_005.expected.yaml  case_006.expected.yaml  case_007.expected.yaml  case_008.expected.yaml  case_009.expected.yaml  case_010.expected.yaml  case_011.expected.yaml  case_012.expected.yaml  case_013.expected.yaml  case_014.expected.yaml  case_015.expected.yaml  case_016.expected.yaml  case_017.expected.yaml  case_018.expected.yaml  case_019.expected.yaml  case_020.expected.yaml  case_021.expected.yaml  case_022.expected.yaml  case_023.expected.yaml  case_024.expected.yaml  case_025.expected.yaml  case_026.expected.yaml  case_027.expected.yaml  case_028.expected.yaml  case_029.expected.yaml  (+1 more)
examples/: README.md  generate_example_assets.py
packaging/: README.md
provenance/: __init__.py  build_resource_graph.py  panel_modality.py  parse_assembly_manifest.py  parse_figure_source_map.py
schemas/: __init__.py  audit_summary.schema.json  calibrated_findings.schema.json  claim_manifest.schema.json  detector_output.schema.json  paper_object.schema.json  provenance_edge.schema.json  provenance_graph.schema.json  resource_node.schema.json  risk_rules.yaml
scripts/: __init__.py  audit_package.py  build_release_artifacts.py  compare_audit_runs.py  csv_safety.py  install_local_commands.py  methodology_checklist.py  run_local_webapp.py  submission_qc.py  writing_readiness_check.py
skill/: __init__.py
tests/: test_contract_pipeline.py  test_pppr_benchmark.py  test_runtime_imports.py  test_webapp_backend.py
webapp/: README.md  __init__.py  __main__.py
(+176 files in other folders)
