[project]
name = "biomed-research-integrity-auditor"
version = "0.2.0"
description = "Codex skill and detector pipeline for biomedical research integrity risk auditing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0"
]

[project.scripts]
biomed-image-global-near-duplicate = "detectors.image.global_near_duplicate:main"
biomed-pseudoreplication-screen = "detectors.stats.pseudoreplication_screen:main"
biomed-risk-cap-engine = "calibrators.risk_cap_engine:main"

[tool.setuptools]
packages = ["calibrators", "detectors", "detectors.image", "detectors.stats"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
