[project]
name = "biomed-research-integrity-auditor"
version = "0.6.2"
description = "Codex skill and detector pipeline for biomedical research integrity risk auditing"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
  "Pillow>=10.0",
  "numpy>=2.0",
  "PyYAML>=6.0",
  "jsonschema>=4.0",
  "openpyxl>=3.1",
  "pypdf>=4.0",
  "PyMuPDF>=1.24",
  "pytesseract>=0.3",
  "requests>=2.31",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9"
]

[project.scripts]
biomed-audit = "scripts.audit_package:main"
biomed-audit-diff = "scripts.compare_audit_runs:main"
biomed-audit-web = "webapp.__main__:main"
biomed-image-global-near-duplicate = "detectors.image.global_near_duplicate:main"
biomed-pseudoreplication-screen = "detectors.stats.pseudoreplication_screen:main"
biomed-risk-cap-engine = "calibrators.risk_cap_engine:main"
biomed-self-audit-webapp = "webapp.__main__:main"

[tool.setuptools]
include-package-data = true
packages = ["calibrators", "detectors", "detectors.image", "detectors.stats", "detectors.text", "provenance", "schemas", "schemas.source_data", "scripts", "skill", "webapp", "webapp.backend", "webapp.frontend", "webapp.frontend.dist", "webapp.frontend.dist.assets"]

[tool.setuptools.package-data]
schemas = ["*.json", "*.yaml"]
"schemas.source_data" = ["*.yaml"]
skill = [
  "biomed-research-integrity-auditor/*.md",
  "biomed-research-integrity-auditor/agents/*.yaml",
  "biomed-research-integrity-auditor/references/*.md",
  "biomed-research-integrity-auditor/scripts/*.py",
  "biomed-research-integrity-auditor/templates/*.md",
  "biomed-research-integrity-auditor/templates/*.json",
  "biomed-research-integrity-auditor/templates/submission_qc/*.csv",
  "biomed-research-integrity-auditor/templates/submission_qc/*.yaml",
  "biomed-research-integrity-auditor/templates/reporting_checklists/*.yaml"
]
"webapp.frontend.dist" = ["*.html"]
"webapp.frontend.dist.assets" = ["*"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
